# bt2usb

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c  tusb_hid_example_main.c
main/bt/: bt.c  bt.h
main/usb/: usb.c  usb.h
